--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'Kodilla-course'
 include 'kodilla-testing'
 include 'Kodilla-stream'
 include 'KODILLA'
+include 'kodilla-exception'
 
