--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'Kodilla-stream'
 include 'KODILLA'
 include 'kodilla-exception'
 include 'kodilla-good-patterns'
-
+include 'kodilla-spring-intro'
+include 'kodilla-spring'
