--- a/kodilla-hibernate/build.gradle
+++ b/kodilla-hibernate/build.gradle
@@ -20,8 +20,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+	implementation 'javax.persistence:javax.persistence-api:2.2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 tasks.named('test') {
